tests/core/error/fts-snippet-3.rq
SELECT (fts:snippet AS ?snippet) { ?u fts:match "a" }
